@@ -1,4 +1,4 @@
-# $NetBSD: shl.mi,v 1.581 2011/04/15 18:05:43 elric Exp $
+# $NetBSD: shl.mi,v 1.582 2011/05/09 08:51:08 manu Exp $
 #
 # Note:	Don't delete entries from here - mark them as "obsolete" instead,
 #	unless otherwise stated below.
@@ -342,6 +342,9 @@
 ./usr/lib/libossaudio.so			base-sys-shlib
 ./usr/lib/libossaudio.so.1			base-sys-shlib
 ./usr/lib/libossaudio.so.1.0			base-sys-shlib
+./usr/lib/libperfuse.so				base-perfuse-shlib	perfuse
+./usr/lib/libperfuse.so.0			base-perfuse-shlib	perfuse
+./usr/lib/libperfuse.so.0.0			base-perfuse-shlib	perfuse
 ./usr/lib/libp2k.so				base-puffs-shlib
 ./usr/lib/libp2k.so.2				base-puffs-shlib
 ./usr/lib/libp2k.so.2.0				base-puffs-shlib
